<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AlterMapActivity">


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="27dp"
        android:layout_marginEnd="31dp"
        android:text="Button"
        android:layout_alignParentRight="true"
        android:layout_marginRight="31dp"
        />
    <TextView
        android:id="@+id/edit_map_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_map"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/exhibit_col"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edit_map_title"
        android:text="@string/exhibit_col"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="139dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/edit_map_title"
        android:layout_marginEnd="80dp"
        android:text="@string/description_col"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:layout_marginRight="80dp" />
<!--BLUE EXHIBIT-->
    <EditText
        android:id="@+id/edit_blue"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_map_title"
        android:layout_alignParentTop="true"
        android:layout_marginTop="58dp"
        android:layout_alignRight="@+id/edit_map_title"
        android:inputType="textCapSentences|textAutoCorrect"/>

    <TextView
        android:id="@+id/textView_blue"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_blue"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/blue_exhibit"/>
    <!--GREEN EXHIBIT-->
    <EditText
        android:id="@+id/edit_green"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_map_title"
        android:layout_alignParentTop="true"
        android:layout_marginTop="133dp"
        android:layout_alignRight="@+id/edit_map_title"
        android:inputType="textCapSentences|textAutoCorrect"/>
    <TextView
        android:id="@+id/textView_green"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_green"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/green_exhibit"/>
<!--RED EXHIBIT-->
    <EditText
        android:id="@+id/edit_red"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_map_title"
        android:layout_alignParentTop="true"
        android:layout_marginTop="210dp"
        android:inputType="textCapSentences|textAutoCorrect"
        android:layout_alignRight="@+id/edit_map_title" />
    <TextView
        android:id="@+id/textView_red"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_red"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/red_exhibit"/>
    <!--ORANGE EXHIBIT-->
    <EditText
        android:id="@+id/edit_orange"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_map_title"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="159dp"
        android:layout_alignRight="@+id/edit_map_title"
        android:inputType="textCapSentences|textAutoCorrect"/>
    <TextView
        android:id="@+id/textView_orange"
        android:layout_width="67dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_orange"
        android:text="@string/orange_exhibit"/>
    <!--ORANGE FLOOR-->
    <EditText
        android:id="@+id/edit_orange_floor"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_map_title"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="102dp"
        android:inputType="textCapSentences|textAutoCorrect"
        android:layout_alignRight="@+id/edit_map_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edit_orange_floor"
        android:text="@string/orange_floor" />

</RelativeLayout>
